<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@android:color/black">

    <ScrollView
        android:id="@+id/scrollCreditos"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:scrollbars="none">

        <LinearLayout
            android:id="@+id/layoutCreditos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:padding="40dp">

            <TextView
                android:text="@string/creditos_texto"
                android:textSize="32sp"
                android:textStyle="bold"
                android:textColor="@android:color/white"
                android:layout_marginBottom="40dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/txtCreditos1_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/white"
                android:textSize="22sp"
                android:textStyle="bold"
                android:gravity="center"
                android:textAlignment="center"
                android:text="@string/txtCreditos1_1"/>

            <TextView
                android:id="@+id/txtCreditos1_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/white"
                android:textSize="20sp"
                android:gravity="center"
                android:textAlignment="center"
                android:text="@string/txtCreditos1_2"/>

            <TextView
                android:id="@+id/txtCreditos2_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/white"
                android:textSize="22sp"
                android:textStyle="bold"
                android:gravity="center"
                android:textAlignment="center"
                android:text="@string/txtCreditos2_1"/>

            <TextView
                android:id="@+id/txtCreditos2_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/white"
                android:textSize="20sp"
                android:gravity="center"
                android:textAlignment="center"
                android:text="@string/txtCreditos2_2"/>

            <TextView
                android:id="@+id/txtCreditos3_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/white"
                android:textSize="22sp"
                android:textStyle="bold"
                android:gravity="center"
                android:textAlignment="center"
                android:text="@string/txtCreditos3_1"/>

            <TextView
                android:id="@+id/txtCreditos3_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/white"
                android:textSize="20sp"
                android:gravity="center"
                android:textAlignment="center"
                android:text="@string/txtCreditos3_2"/>

            <TextView
                android:id="@+id/txtCreditos4_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/white"
                android:textSize="22sp"
                android:textStyle="bold"
                android:gravity="center"
                android:textAlignment="center"
                android:text="@string/txtCreditos4_1"/>

            <TextView
                android:id="@+id/txtCreditos4_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/white"
                android:textSize="20sp"
                android:gravity="center"
                android:textAlignment="center"
                android:text="@string/txtCreditos4_2"/>

            <TextView
                android:id="@+id/txtCreditos5_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/white"
                android:textSize="22sp"
                android:textStyle="bold"
                android:gravity="center"
                android:textAlignment="center"
                android:text="@string/txtCreditos5_1"/>

            <TextView
                android:id="@+id/txtCreditos5_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/white"
                android:textSize="20sp"
                android:gravity="center"
                android:textAlignment="center"
                android:text="@string/txtCreditos5_2"/>

            <TextView
                android:id="@+id/txtCreditos6_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/white"
                android:textSize="22sp"
                android:textStyle="bold"
                android:gravity="center"
                android:textAlignment="center"
                android:text="@string/txtCreditos6_1"/>

            <TextView
                android:id="@+id/txtCreditos6_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/white"
                android:textSize="20sp"
                android:gravity="center"
                android:textAlignment="center"
                android:text="@string/txtCreditos6_2"/>


        </LinearLayout>

    </ScrollView>

    <Button
        android:id="@+id/btnVolverMenu"
        style="?attr/materialButtonOutlinedStyle"
        android:layout_width="match_parent"
        android:layout_height="53dp"
        android:layout_gravity="center"
        android:layout_marginStart="50dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="40dp"
        android:text="Volver al menú"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:visibility="gone"
        app:cornerRadius="15dp" />

</FrameLayout>