<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_gradient"
    android:fitsSystemWindows="true"
    tools:context=".AuthActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="#00000000"
        android:paddingEnd="20dp"
        android:paddingStart="20dp"
        app:layout_constraintTop_toTopOf="parent"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/my_toolbar">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="40dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/emailTI"
                android:layout_width="276dp"
                android:layout_height="54dp"
                android:layout_marginTop="1dp"
                android:background="@drawable/input_background"
                android:hint="@string/email_hint"
                android:inputType="textEmailAddress"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:textColor="@color/white"
                android:textColorHint="#99FFFFFF"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/EmailTV" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/contraTI"
                android:layout_width="276dp"
                android:layout_height="54dp"
                android:layout_marginTop="1dp"
                android:background="@drawable/input_background"
                android:hint="@string/contrasena_hint"
                android:inputType="textPassword"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:textColor="@color/white"
                android:textColorHint="#99FFFFFF"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ContraTV" />

            <ImageView
                android:id="@+id/logo"
                android:layout_width="315dp"
                android:layout_height="135dp"
                android:contentDescription="@string/app_name"
                android:scaleType="centerCrop"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/lettering_quizmillion" />


            <TextView
                android:id="@+id/IniciarText"
                android:layout_width="250dp"
                android:layout_height="100dp"
                android:layout_marginHorizontal="40dp"
                android:layout_marginTop="17dp"
                android:fontFamily="@font/poppinsbold"
                android:gravity="center"
                android:lineSpacingExtra="-10sp"
                android:text="@string/iniciar_sesion"
                android:textColor="@color/white"
                android:textSize="40sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/logo" />

            <TextView
                android:id="@+id/EmailTV"
                android:layout_width="266dp"
                android:layout_height="25dp"
                android:layout_marginHorizontal="40dp"
                android:layout_marginTop="44dp"
                android:fontFamily="@font/poppinsregular"
                android:gravity="start"
                android:lineSpacingExtra="-10sp"
                android:text="@string/email"
                android:textColor="@color/white"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/IniciarText" />

            <TextView
                android:id="@+id/ContraTV"
                android:layout_width="261dp"
                android:layout_height="26dp"
                android:layout_marginHorizontal="40dp"
                android:layout_marginTop="17dp"
                android:fontFamily="@font/poppinsregular"
                android:gravity="start"
                android:lineSpacingExtra="-10sp"
                android:text="@string/contrasena"
                android:textColor="@color/white"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/emailTI" />

            <Button
                android:id="@+id/AuthBtn"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="274dp"
                android:layout_height="53dp"
                android:layout_marginTop="50dp"
                android:text="@string/iniciar_sesion"
                android:textColor="@color/white"
                android:textSize="17sp"
                app:cornerRadius="15dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.489"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/contraTI"
                app:strokeColor="@color/white" />

            <ProgressBar
                android:id="@+id/progressBar2"
                style="?android:attr/progressBarStyle"
                android:layout_width="230dp"
                android:layout_height="230dp"
                android:layout_marginTop="120dp"
                android:progressTint="@color/colorPrimary"
                android:visibility="invisible"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/logo" />

            <TextView
                android:id="@+id/recupTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="38dp"
                android:text="@string/recordar_contrasena"
                android:textColor="@color/white"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.497"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/AuthBtn" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>