<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_gradient"
    android:fitsSystemWindows="true"
    tools:context=".WelcomeActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="#00000000"
        android:paddingEnd="20dp"
        android:paddingStart="20dp"
        app:layout_constraintTop_toTopOf="parent"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/my_toolbar">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="40dp">

            <ImageView
                android:id="@+id/logo"
                android:layout_width="215dp"
                android:layout_height="209dp"
                android:contentDescription="@string/app_name"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/logo_app" />

            <TextView
                android:id="@+id/WelcomeText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="40dp"
                android:layout_marginTop="60dp"
                android:fontFamily="@font/poppinsbold"
                android:gravity="center"
                android:lineSpacingExtra="-10sp"
                android:text="@string/quien_millonario"
                android:textColor="@color/white"
                android:textSize="40sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/logo" />

            <Button
                android:id="@+id/RegisBtn"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="274dp"
                android:layout_height="53dp"
                android:layout_marginTop="50dp"
                android:text="@string/resgistrarse"
                android:textColor="@color/white"
                android:textSize="17sp"
                app:cornerRadius="15dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.496"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/WelcomeText"
                app:strokeColor="@color/white" />

            <Button
                android:id="@+id/AuthBtn"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="274dp"
                android:layout_height="53dp"
                android:layout_marginTop="17dp"
                android:text="@string/iniciar_sesion"
                android:textColor="@color/white"
                android:textSize="17sp"
                app:cornerRadius="15dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.496"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/RegisBtn"
                app:strokeColor="@color/white" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>